Fix checks on scheduled_on date proposed edit or create: no overlapping with other events

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,9 +7,9 @@
 /* Padding below the footer and lighter body text */
 
 body {
-  padding-top: 3rem;
   padding-bottom: 3rem;
   color: #5a5a5a;
+  font-family: 'Roboto', sans-serif;
 }
 
 .bd-placeholder-img {
@@ -33,11 +33,6 @@ body {
 .carousel {
   margin-bottom: 4rem;
 }
-/* Since positioning the image, we need to help out the caption
-.carousel-caption {
-  bottom: 3rem;
-  z-index: 10;
-} */
 
 /* Declare heights because of positioning of img element */
 .carousel-item {
@@ -77,7 +72,7 @@ body {
 }
 
 .carousel-caption h1, .carousel-caption h1
-/* MARKETING CONTENT
+/* MARKETING CONTENT by BS5 template
 -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
@@ -96,7 +91,7 @@ body {
 /* rtl:end:ignore */
 
 
-/* Featurettes
+/* Featurettes by BS5 template
 ------------------------- */
 
 .featurette-divider {
@@ -112,7 +107,7 @@ body {
 }
 
 
-/* RESPONSIVE CSS
+/* RESPONSIVE CSS BY BS5
 -------------------------------------------------- */
 
 @media (min-width: 40em) {
@@ -297,10 +292,6 @@ body {
   justify-content: space-evenly;
 }
 
-header + .container-fluid {
-  margin-top: 0.438rem;
-}
-
 .alert-dismissible .btn-close {
   position: inherit;
   padding: 0;
@@ -332,90 +323,44 @@ footer {
 /* Event cards
 -------------------------------------------------- */
 
-/* *{
-  box-sizing: border-box;
-}
-
-body, html {
-   font-family: 'Roboto Slab', serif;
-    margin: 0;
+.cardss {
   width: 100%;
-height: 100%;
-    padding: 0;
-}
-
-body {
-  background-color: #D2DBDD;
   display: flex;
   display: -webkit-flex;
-  -webkit-justify-content: center;
-  -webkit-align-items: center;
   justify-content: center;
-  align-items: center;
-} */
-
-.cardss {
-    width: 100%;
-    display: flex;
-    display: -webkit-flex;
-    justify-content: center;
-    -webkit-justify-content: center;
-    max-width: 820px;
-}
-
-.card--2 .card__img, .card--2 .card__img--hover {
-    background-image: url('https://images.pexels.com/photos/307008/pexels-photo-307008.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260');
-}
-
-.card__like {
-    width: 18px;
-}
-
-.card__clock {
-    width: 15px;
-  vertical-align: middle;
-    fill: #AD7D52;
-}
-.card__time {
-    font-size: 12px;
-    color: #AD7D52;
-    vertical-align: middle;
-    margin-left: 5px;
-}
-
-.card__clock-info {
-    float: right;
+  -webkit-justify-content: center;
+  max-width: 820px;
 }
 
 .card__img {
   visibility: hidden;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 235px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 235px;
   border-top-left-radius: 12px;
 border-top-right-radius: 12px;
   
 }
 
 .card__info-hover {
-    position: absolute;
-    padding: 16px;
+  position: absolute;
+  padding: 16px;
   width: 100%;
   opacity: 0;
   top: 0;
 }
 
 .card__img--hover {
-  transition: 0.2s all ease-out;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    width: 100%;
-  position: absolute;
-    height: 235px;
-  border-top-left-radius: 12px;
+transition: 0.2s all ease-out;
+background-size: cover;
+background-position: center;
+background-repeat: no-repeat;
+width: 100%;
+position: absolute;
+height: 235px;
+border-top-left-radius: 12px;
 border-top-right-radius: 12px;
 top: 0;
   
@@ -423,63 +368,67 @@ top: 0;
 .cardd {
   margin-right: 25px;
   transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
-  background-color: #fff;
-    width: 100%;
+  background-color: rgba(255, 251, 45, 0.855);
+  width: 100%;
   position: relative;
   border-radius: 12px;
   overflow: hidden;
-  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
+  box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.526);
 }
 .cardd:hover {
-  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0,0.1);
-    transform: scale(1.10, 1.10);
+  box-shadow: 0px 30px 18px -8px rgba(0, 0, 0, 0.526);
+  transform: scale(1.10, 1.10);
 }
 
 .card__info {
 z-index: 2;
   background-color: #fff;
   border-bottom-left-radius: 12px;
-border-bottom-right-radius: 12px;
-   padding: 16px 24px 24px 24px;
+  border-bottom-right-radius: 12px;
+  padding: 16px 24px 24px 24px;
 }
 
 .card__category {
-    font-family: 'Raleway', sans-serif;
-    text-transform: uppercase;
-    font-size: 13px;
-    letter-spacing: 2px;
-    font-weight: 500;
+  font-family: 'Raleway', sans-serif;
+  text-transform: uppercase;
+  font-size: 13px;
+  letter-spacing: 2px;
+  font-weight: 500;
   color: #868686;
 }
 
 .card__title {
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-family: 'Roboto Slab', serif;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .card__by {
-    font-size: 12px;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 500;
+  font-size: 12px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 500;
 }
 
 .card__author {
-    font-weight: 600;
-    text-decoration: none;
-    color: #AD7D52;
+  font-weight: 600;
+  text-decoration: none;
+  color: #AD7D52;
 }
 
 .cardd:hover .card__img--hover {
-    height: 100%;
-    opacity: 0.3;
+  height: 100%;
+  opacity: 0.1;
 }
 
 .cardd:hover .card__info {
-    background-color: transparent;
-    position: relative;
+  background-color: transparent;
+  position: relative;
 }
 
 .cardd:hover .card__info-hover {
-    opacity: 1;
+  opacity: 1;
 }
+
+/* FORM STYLING - CREATE AND UPDATE PAGES
+-------------------------------------------------- */
+
+
